--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-simply-carousel": "^9.1.1",
     "react-slick": "^0.30.1",
+    "sharp": "^0.33.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
