--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-simply-carousel": "^9.1.1",
     "react-slick": "^0.30.1",
     "sharp": "^0.33.2",
