--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@react-hook/media-query": "^1.1.1",
+    "@web3auth/base": "^8.0.0",
+    "@web3auth/modal": "^8.0.1",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
